--- a/dmu13/dmu13-lockman-hole-project-1.4-ghz-cat-ids/meta_main.yml
+++ b/dmu13/dmu13-lockman-hole-project-1.4-ghz-cat-ids/meta_main.yml
@@ -2,7 +2,7 @@ Product: Lockman Hole Project 1.4GHz Catalogue
 
 Version: 20170331
 
-Author: Isabel Prandoni
+Author: Isabella Prandoni
 
 Fields: Lockman Hole 
 
