--- a/dmu0/dmu0_CANDELS-3D-HST/meta_survey.yml
+++ b/dmu0/dmu0_CANDELS-3D-HST/meta_survey.yml
@@ -6,6 +6,8 @@ Instrument: Wide FIeld Camera 3 (WFC3)
 
 Filters: F140W, F160W, F606W, F814W, F125W
 
+Fields: CDFS-SWIRE, COSMOS, EGS, HDF-N, XMM-LSS
+
 P.I.: R.E. Skelton
 
 Reference: 2014ApJS..214...24S
