--- a/dmu0/dmu0_CFHT-WIRDS/meta_survey.yml
+++ b/dmu0/dmu0_CFHT-WIRDS/meta_survey.yml
@@ -6,6 +6,8 @@ Instrument: WIRCAM
 
 Filters: J, H, Ks
 
+Fields: COSMOS, EGS, XMM-LSS
+
 Reference: 2012A&A...545A..23B
 
 Publication date: July 26th, 2010
