--- a/dmu0/dmu0_COMBO-17/meta_survey.yml
+++ b/dmu0/dmu0_COMBO-17/meta_survey.yml
@@ -8,6 +8,8 @@ Instrument: Wide Field Imager (WFI)
 Filters: U, B, V, R, I, 420nm, 465nm, 486nm, 518nm, 571nm, 605nm, 646nm, 696nm,
   752nm, 816nm, 856nm, 914nm
 
+Fields: CDFS-SWIRE
+
 P.I.: Wolf C.
 
 Reference: 2004A&A...421..913W
