--- a/dmu0/dmu0_DEEP2/meta_survey.yml
+++ b/dmu0/dmu0_DEEP2/meta_survey.yml
@@ -6,6 +6,8 @@ Instrument: CFH12K
 
 Filters: B, R, I
 
+Fields: EGS, Herschel-Stripe-82
+
 Reference: 2004ApJ...617..765C
 
 URL: http://deep.ps.uci.edu/DR4/photo.html
