--- a/dmu0/dmu0_Fireworks/meta_survey.yml
+++ b/dmu0/dmu0_Fireworks/meta_survey.yml
@@ -7,6 +7,8 @@ Instrument: ESO/WFI, HST/ACS, VLT/ISAAC, Spitzer/IRAC
 Filters: WFI-U38, ACS-F435W, WFI-B, WFI-V, ACS-F606W, WFI-Rc, ACS-F775W, WFI-Ic,
   ACS-F850LP, ISAAC-J, ISAAC-H, ISAAC-Ks, IRAC1, IRAC2, IRAC3, IRAC4
 
+Fields: CDFS-SWIRE
+
 P.I.: Stĳn Wuyts
 
 Reference: 2008ApJ...682..985W
