--- a/dmu0/dmu0_GOODS-ACS/meta_survey.yml
+++ b/dmu0/dmu0_GOODS-ACS/meta_survey.yml
@@ -6,4 +6,6 @@ Instrument: Advanced Camera for Surveys (ACS)
 
 Filters: b, i, v, z
 
+Fields: CDFS-SWIRE, HDF-N
+
 URL: http://www.stsci.edu/science/goods/DataProducts/
