--- a/dmu0/dmu0_Hawaii-HDFN/meta_survey.yml
+++ b/dmu0/dmu0_Hawaii-HDFN/meta_survey.yml
@@ -9,6 +9,8 @@ Instrument: MOSAIC prime focus (KPNO), Suprime-Cam (Subaru), and QUIRC
 Filters: MOSAIC-U, Suprime-B, Suprime-V, Suprime-R, Suprime-I, Suprime-z',
   QUIRC-HK'
 
+Fields: HDF-N
+
 P.I.: Peter Capak
 
 Reference: 2004AJ....127..180C
