--- a/dmu0/dmu0_SXDS/meta_survey.yml
+++ b/dmu0/dmu0_SXDS/meta_survey.yml
@@ -6,6 +6,8 @@ Instrument: Suprime-Cam
 
 Filters: B, V, r, i, z
 
+Fields: XMM-LSS
+
 P.I.: Dr. Kaz Sekiguchi (kaz.sekiguchi@nao.ac.jp)
 
 Reference: 2008ApJS..176....1F
