--- a/dmu0/dmu0_UKIDSS-UDS/meta_survey.yml
+++ b/dmu0/dmu0_UKIDSS-UDS/meta_survey.yml
@@ -6,6 +6,8 @@ Instrument: Wide Field Infrared Camera (WFCAM)
 
 Filters: J, H, K
 
+Fields: XMM-LSS
+
 P.I.: Omar Almaini
 
 Reference: 2007ASPC..379..163A
