--- a/dmu0/dmu0_VICS82/meta_survey.yml
+++ b/dmu0/dmu0_VICS82/meta_survey.yml
@@ -6,6 +6,8 @@ Instrument: CFHT/WIRCam, VISTA/VIRCAM
 
 Filters: WIRCam-J, VIRCAM-J, WIRCam-Ks, VIRCAM-Ks
 
+Fields: Herschel-Stripe-82
+
 P.I.: James Geach
 
 Reference: in prep
