--- a/dmu0/dmu0_VIPERS-MLS/meta_survey.yml
+++ b/dmu0/dmu0_VIPERS-MLS/meta_survey.yml
@@ -6,6 +6,8 @@ Instrument: WIRCam (+ others)
 
 Filters: Ks (+ others)
 
+Fields: XMM-LSS
+
 P.I.: Stéphane Arnouts
 
 Reference: 2016A&A...590A.102M
