--- a/dmu0/dmu0_zBootes/meta_survey.yml
+++ b/dmu0/dmu0_zBootes/meta_survey.yml
@@ -7,6 +7,8 @@ Instrument: 90Prime imager
 
 Filters: z
 
+Fields: Bootes
+
 Reference: 2007ApJS..169...21C
 
 URL: http://r2.sdm.noao.edu/nsa/zbootes.html
