--- a/dmu0/dmu0_SHELA/meta_survey.yml
+++ b/dmu0/dmu0_SHELA/meta_survey.yml
@@ -6,6 +6,8 @@ Instrument: IRAC
 
 Filters: IRAC1, IRAC2
 
+Fields: Herschel-Stripe-82
+
 Reference: 2016ApJS..224...28P
 
 URL: http://irsa.ipac.caltech.edu/data/SPITZER/SHELA/
