Correct yaml files

--- a/dmu0/dmu0_VISTA-VHS/meta_survey.yml
+++ b/dmu0/dmu0_VISTA-VHS/meta_survey.yml
@@ -1,6 +1,6 @@
 Survey: VISTA Hemisphere Survey (VHS)
 
-Telescope:Visible and Infrared Survey Telescope for Astronomy (VISTA)
+Telescope: Visible and Infrared Survey Telescope for Astronomy (VISTA)
 
 Instrument: Vista InfraRed CAMera (VIRCAM)
 
@@ -16,4 +16,4 @@ Reference: 2013Msngr.154...35M
 URL: http://vista-vhs.org
 
 Acknowledgement: Based on observations obtained as part of the VISTA Hemisphere
-  Survey, ESO Progam, 179.A-2010 (PI: McMahon)
+  Survey, ESO Progam, 179.A-2010 (PI McMahon)
