--- a/dmu0/dmu0_zBootes/meta_survey.yml
+++ b/dmu0/dmu0_zBootes/meta_survey.yml
@@ -1,4 +1,4 @@
-Survey: zBootes: z-band Observations of the NOAO Deep Wide-Field Survey Bootes
+Survey: zBootes - z-band Observations of the NOAO Deep Wide-Field Survey Bootes
   Field
 
 Telescope: Steward 2.3m Bok
