--- a/dmu0/dmu0_UKIDSS-DXS_DR10plus/meta_survey.yml
+++ b/dmu0/dmu0_UKIDSS-DXS_DR10plus/meta_survey.yml
@@ -4,7 +4,7 @@ Telescope: United Kingdom Infrared Telescope (UKIRT)
 
 Instrument: WFCAM
 
-Filters: J, H, K
+Filters: J, K
 
 Fields: ELAIS-N1, Lockman-SWIRE, XMM-LSS
 
