[dmu0_VICS82] Update reference

--- a/dmu0/dmu0_VICS82/meta_survey.yml
+++ b/dmu0/dmu0_VICS82/meta_survey.yml
@@ -10,6 +10,6 @@ Fields: Herschel-Stripe-82
 
 P.I.: James Geach
 
-Reference: in prep
+Reference: 2017arXiv170505451G
 
 URL: http://stri-cluster.herts.ac.uk/vics82/
