--- a/dmu0/dmu0_VISTA-VIKING/meta_survey.yml
+++ b/dmu0/dmu0_VISTA-VIKING/meta_survey.yml
@@ -4,7 +4,7 @@ Telescope: Visible and Infrared Survey Telescope for Astronomy (VISTA)
 
 Instrument: Vista InfraRed CAMera (VIRCAM)
 
-Filters: Y, J, H, K
+Filters: Y, J, H, Ks
 
 Fields: CDFS-SWIRE, GAMA-09, GAMA-12, GAMA-15, HATLAS-SGP, XMM-LSS
 
