XID+SPIRE_ELAIS-N1_SWIRE and typos in XID+MIPS_ELAIS-N1 readme

--- a/dmu26/dmu26_XID+SPIRE_ELAIS-N1/meta_main.yml
+++ b/dmu26/dmu26_XID+SPIRE_ELAIS-N1/meta_main.yml
@@ -12,4 +12,4 @@ Rights: N/A
 
 Acknowledgements: N/A
 
-Related products: ELAIS-N1-NEST_image_250_SMAP_v6.0.fits, ELAIS-N1-NEST_image_350_SMAP_v6.0.fits, ELAIS-N1-NEST_image_500_SMAP_v6.0.fits, dmu26_XID+MIPS_ELAIS-N1_SERVS_cat_20170710.fits	
+Related products: ELAIS-N1-NEST_image_250_SMAP_v6.0.fits, ELAIS-N1-NEST_image_350_SMAP_v6.0.fits, ELAIS-N1-NEST_image_500_SMAP_v6.0.fits, dmu26_XID+MIPS_ELAIS-N1_SERVS_cat_20170710.fits, dmu26_XID+MIPS_ELAIS-N1_SWIRE_cat_20170725.fits
