--- a/dmu26/dmu26_XID+SPIRE_ELAIS-N1/meta_survey_1.yml
+++ b/dmu26/dmu26_XID+SPIRE_ELAIS-N1/meta_survey_1.yml
@@ -6,7 +6,7 @@ Instrument: IRAC
 
 Filters: f_irac1, f_irac2, f_irac3, f_irac4
 
-P.I.: Mark Lacey
+P.I.: Mark Lacey,
 
 Reference: Publications of the Astronomical Society of Pacific, Volume 124, Issue 917, pp. 714 (2012)
 
