[dmu0_UKIDSS-LAS] Correct survey bands (thanks Raphael)

--- a/dmu0/dmu0_UKIDSS-LAS/meta_survey.yml
+++ b/dmu0/dmu0_UKIDSS-LAS/meta_survey.yml
@@ -4,7 +4,7 @@ Telescope: United Kingdom Infrared Telescope (UKIRT)
 
 Instrument: WFCAM
 
-Filters: U, J, H, K
+Filters: Y, J, H, K
 
 Fields: COSMOS, GAMA-09, GAMA-12, GAMA-15, Herschel-Stripe-82, HATLAS-NGP
 
