--- a/dmu32/dmu32_CDFS-SWIRE/field_meta.yml
+++ b/dmu32/dmu32_CDFS-SWIRE/field_meta.yml
@@ -1,8 +1,12 @@
 field: CDFS-SWIRE
 
-surveys: CANDELS-GOODS-S, VISTA-VIDEO, SERVS, SWIRE, PanSTARRS-3SS, COMBO, Fireworks, ATLAS, VISTA-VHS, DES
+region: dmu_products/dmu2/dmu2_field_coverages/CDFS-SWIRE_MOC.fits
+
+surveys: [ CANDELS-GOODS-S, VISTA-VIDEO, SERVS, SWIRE, PanSTARRS-3SS, COMBO, Fireworks, ATLAS, VISTA-VHS, DES ]
 
 masterlist: dmu_products/dmu1/dmu1_ml_CDFS-SWIRE/data/master_catalogue_cdfs-swire_20180221.fits
+
+depths: dmu_products/dmu1/dmu1_ml_CDFS-SWIRE/data/depths_cdfs-swire_20180221.fits
 
 flags: dmu_products/dmu6/dmu6_v_CDFS-SWIRE/data/cdfs-swire_20180221_flags.fits
 
