--- a/dmu32/dmu32_EGS/field_meta.yml
+++ b/dmu32/dmu32_EGS/field_meta.yml
@@ -1,8 +1,12 @@
 field: EGS
 
-surveys: PanSTARRS1-3SS, LegacySurvey, UHS, AEGIS, CANDELS-3D-HST, CFHT-WIRDS, CFHTLS-WIDE, CFHTLS-DEEP, CFHTLenS, CANDELS-EGS, DEEP2, IRAC-EGS, HSC
+region: dmu_products/dmu2/dmu2_field_coverages/EGS_MOC.fits
+
+surveys: [ PanSTARRS1-3SS, LegacySurvey, UHS, AEGIS, CANDELS-3D-HST, CFHT-WIRDS, CFHTLS-WIDE, CFHTLS-DEEP, CFHTLenS, CANDELS-EGS, DEEP2, IRAC-EGS, HSC ]
 
 masterlist: dmu_products/dmu1/dmu1_ml_EGS/data/master_catalogue_egs_20180406.fits
+
+depths: dmu_products/dmu1/dmu1_ml_EGS/data/depths_egs_20180406.fits
 
 flags: dmu_products/dmu6/dmu6_v_EGS/data/egs_20180501_flags.fits
 
