--- a/dmu32/dmu32_GAMA-09/field_meta.yml
+++ b/dmu32/dmu32_GAMA-09/field_meta.yml
@@ -1,8 +1,12 @@
 field: GAMA-09
 
-surveys: CFHTLS, CFHTLenS, DECaLS, HSC-SSP, KIDS, PanSTARRS-3SS, UKIDSS-LAS, VISTA-VHS, VISTA-VIKING
+region: dmu_products/dmu2/dmu2_field_coverages/GAMA-09_MOC.fits
+
+surveys: [ CFHTLS, CFHTLenS, DECaLS, HSC-SSP, KIDS, PanSTARRS-3SS, UKIDSS-LAS, VISTA-VHS, VISTA-VIKING ]
 
 masterlist: dmu_products/dmu1/dmu1_ml_GAMA-09/data/master_catalogue_gama-09_20180601.fits
+
+depths: dmu_products/dmu1/dmu1_ml_GAMA-09/data/depths_gama-09_20180601.fits
 
 flags: dmu_products/dmu6/dmu6_v_GAMA-09/data/gama-09_20171206_flags.fits
 
