--- a/dmu32/dmu32_AKARI-NEP/field_meta.yml
+++ b/dmu32/dmu32_AKARI-NEP/field_meta.yml
@@ -1,8 +1,12 @@
 field: AKARI-NEP
 
-surveys: AKARI-NEP-OptNIR, PanSTARRS-3SS, NEP-Spitzer
+region: dmu_products/dmu2/dmu2_field_coverages/AKARI-NEP_MOC.fits
+
+surveys: [ AKARI-NEP-OptNIR, PanSTARRS-3SS, NEP-Spitzer ]
 
 masterlist: dmu_products/dmu1/dmu1_ml_AKARI-NEP/data/master_catalogue_akari-nep_20180215.fits
+
+depths: dmu_products/dmu1/dmu1_ml_AKARI-NEP/data/depths_akari-nep_20180215.fits
 
 flags: dmu_products/dmu6/dmu6_v_AKARI-NEP/data/akari-nep_20180215_flags.fits
 
