--- a/dmu32/dmu32_AKARI-SEP/field_meta.yml
+++ b/dmu32/dmu32_AKARI-SEP/field_meta.yml
@@ -1,8 +1,12 @@
 field: AKARI-SEP
 
-surveys: SIMES, VISTA-VHS, DES
+region: dmu_products/dmu2/dmu2_field_coverages/AKARI-SEP_MOC.fits
+
+surveys: [ SIMES, VISTA-VHS, DES ]
 
 masterlist: dmu_products/dmu1/dmu1_ml_AKARI-SEP/data/master_catalogue_akari-sep_20180221.fits
+
+depths: dmu_products/dmu1/dmu1_ml_AKARI-SEP/data/depths_akari-sep_20180221.fits
 
 flags: dmu_products/dmu6/dmu6_v_AKARI-SEP/data/akari-sep_20180221_flags.fits
 
