--- a/dmu32/dmu32_HDF-N/field_meta.yml
+++ b/dmu32/dmu32_HDF-N/field_meta.yml
@@ -1,8 +1,12 @@
 field: HDF-N
 
-surveys: CANDELS-3D-HST, GOODS-ACS, Hawaii-HDFN, Ultradeep-Ks-GOODS-N, PanSTARRS1-3SS, CANDELS-GOODS-N
+region: dmu_products/dmu2/dmu2_field_coverages/HDF-N_MOC.fits
+
+surveys: [ CANDELS-3D-HST, GOODS-ACS, Hawaii-HDFN, Ultradeep-Ks-GOODS-N, PanSTARRS1-3SS, CANDELS-GOODS-N ]
 
 masterlist: dmu_products/dmu1/dmu1_ml_HDF-N/data/master_catalogue_hdf-n_20180427.fits
+
+depths: dmu_products/dmu1/dmu1_ml_HDF-N/data/depths_hdf-n_20180427.fits
 
 flags: dmu_products/dmu6/dmu6_v_HDF-N/data/hdf-n_20180427_flags.fits
 
