--- a/dmu32/dmu32_SA13/field_meta.yml
+++ b/dmu32/dmu32_SA13/field_meta.yml
@@ -1,8 +1,12 @@
 field: SA13
 
-surveys: LegacySurvey, UHS
+region: dmu_products/dmu2/dmu2_field_coverages/SA13_MOC.fits
+
+surveys: [ LegacySurvey, UHS ]
 
 masterlist: dmu_products/dmu1/dmu1_ml_SA13/data/master_catalogue_sa13_20180501.fits
+
+depths: dmu_products/dmu1/dmu1_ml_SA13/data/depths_sa13_20180501.fits
 
 flags: None
 
