--- a/dmu32/dmu32_SSDF/field_meta.yml
+++ b/dmu32/dmu32_SSDF/field_meta.yml
@@ -1,8 +1,12 @@
 field: SSDF
 
-surveys: SSDF, VISTA-VHS, DES
+region: dmu_products/dmu2/dmu2_field_coverages/SSDF_MOC.fits
+
+surveys: [ SSDF, VISTA-VHS, DES ]
 
 masterlist: dmu_products/dmu1/dmu1_ml_SSDF/data/master_catalogue_ssdf_20180221.fits
+
+depths: dmu_products/dmu1/dmu1_ml_SSDF/data/depths_ssdf_20180221.fits
 
 flags: None
 
