--- a/dmu26/dmu26_XID+MIPS_Lockman-SWIRE/meta_main.yml
+++ b/dmu26/dmu26_XID+MIPS_Lockman-SWIRE/meta_main.yml
@@ -1,10 +1,10 @@
-Product: dmu26_XID+MIPS_CDFS-SWIRE
+Product: dmu26_XID+MIPS_Lockman-SWIRE
 
 Version: 1.0
 
 Author: Peter Hurley
 
-Fields: CDFS-SWIRE
+Fields: Lockman-SWIRE
 
 Selection filter: F_MIPS_24
 
@@ -12,4 +12,4 @@ Rights: N/A
 
 Acknowledgements: N/A
 
-Related products: wp4_CDFS-SWIRE_mips24_map_v1.0.fits.gz, dmu17_MIPS_PSF_CDFS-SWIRE_20170818.fits , master_catalogue_CDFS-SWIRE_20170801.fits.gz
+Related products: wp4_Lockman-SWIRE_mips24_map_v1.0.fits.gz, dmu17_MIPS_Lockman-SWIRE_20171122.fits , master_catalogue_lockman-swire_20171129.fits
