--- a/dmu32/dmu32_ELAIS-S1/field_meta.yml
+++ b/dmu32/dmu32_ELAIS-S1/field_meta.yml
@@ -1,19 +1,19 @@
 field: ELAIS-S1
 
-region: dmu_products/dmu2/dmu2_field_coverages/ELAIS-S1_MOC.fits
+region: http://hedam.lam.fr/HELP/data/dmu_products/dmu2/dmu2_field_coverages/ELAIS-S1_MOC.fits
 
 surveys: [ VISTA-VIDEO, VISTA-VHS, ESIS-VOICE, SWIRE, SERVS, DES ]
 
-masterlist: dmu_products/dmu1/dmu1_ml_ELAIS-S1/data/master_catalogue_elais-s1_20180416.fits
+masterlist: http://hedam.lam.fr/HELP/data/dmu_products/dmu1/dmu1_ml_ELAIS-S1/data/master_catalogue_elais-s1_20180416.fits
 
-depths: dmu_products/dmu1/dmu1_ml_ELAIS-S1/data/depths_elais-s1_20180416.fits
+depths: http://hedam.lam.fr/HELP/data/dmu_products/dmu1/dmu1_ml_ELAIS-S1/data/depths_elais-s1_20180416.fits
 
-flags: dmu_products/dmu6/dmu6_v_ELAIS-S1/data/elais-s1_20180416_flags.fits
+flags: http://hedam.lam.fr/HELP/data/dmu_products/dmu6/dmu6_v_ELAIS-S1/data/elais-s1_20180416_flags.fits
 
-xid: dmu_products/dmu26/dmu26_XID+MIPS_ELAIS-S1/data/dmu26_XID+MIPS_ELAIS-S1_20180215.fits, dmu_products/dmu26/dmu26_XID+PACS_ELAIS-S1/data/dmu26_XID+PACS_ELAIS-S1_cat_20180416.fits, dmu_products/dmu26/dmu26_XID+SPIRE_ELAIS-S1/data/dmu26_XID+SPIRE_ELAIS-S1_20180327.fits
+xid: [ http://hedam.lam.fr/HELP/data/dmu_products/dmu26/dmu26_XID+MIPS_ELAIS-S1/data/dmu26_XID+MIPS_ELAIS-S1_20180215.fits, http://hedam.lam.fr/HELP/data/dmu_products/dmu26/dmu26_XID+PACS_ELAIS-S1/data/dmu26_XID+PACS_ELAIS-S1_cat_20180416.fits, http://hedam.lam.fr/HELP/data/dmu_products/dmu26/dmu26_XID+SPIRE_ELAIS-S1/data/dmu26_XID+SPIRE_ELAIS-S1_20180327.fits ]
 
-photoz: dmu_producst/dmu24/dmu24_ELAIS-S1/data/master_catalogue_elais-s1_20180221_photoz_20180412.fits
+photoz: http://hedam.lam.fr/HELP/data/dmu_producst/dmu24/dmu24_ELAIS-S1/data/master_catalogue_elais-s1_20180221_photoz_20180412.fits
 
-cigale: dmu_products/dmu28/dmu28_ELAIS-S1/data/best/HELP_final_results.fits
+cigale: http://hedam.lam.fr/HELP/data/dmu_products/dmu28/dmu28_ELAIS-S1/data/best/HELP_final_results.fits
 
-final: dmu_products/dmu32/dmu32_ELAIS-S1/data/ELAIS-S1_20180416_cigale.fits
+final: http://hedam.lam.fr/HELP/data/dmu_products/dmu32/dmu32_ELAIS-S1/data/ELAIS-S1_20180416_cigale.fits
