--- a/dmu32/dmu32_XMM-13hr/field_meta.yml
+++ b/dmu32/dmu32_XMM-13hr/field_meta.yml
@@ -1,12 +1,12 @@
 field: XMM-13hr
 
-region: dmu_products/dmu2/dmu2_field_coverages/XMM-13hr_MOC.fits
+region: http://hedam.lam.fr/HELP/data/dmu_products/dmu2/dmu2_field_coverages/XMM-13hr_MOC.fits
 
 surveys: [ LegacySurvey, UHS ]
 
-masterlist: dmu_products/dmu1/dmu1_ml_XMM-13hr/data/master_catalogue_xmm-13hr_20180501.fits
+masterlist: http://hedam.lam.fr/HELP/data/dmu_products/dmu1/dmu1_ml_XMM-13hr/data/master_catalogue_xmm-13hr_20180501.fits
 
-depths: dmu_products/dmu1/dmu1_ml_XMM-13hr/data/depths_xmm-13hr_20180501.fits
+depths: http://hedam.lam.fr/HELP/data/dmu_products/dmu1/dmu1_ml_XMM-13hr/data/depths_xmm-13hr_20180501.fits
 
 flags: None
 
@@ -16,4 +16,4 @@ photoz: None
 
 cigale: None
 
-final: dmu_products/dmu32/dmu32_XMM-13hr/data/XMM-13hr_20180501_cigale.fits
+final: http://hedam.lam.fr/HELP/data/dmu_products/dmu32/dmu32_XMM-13hr/data/XMM-13hr_20180501_cigale.fits
