--- a/dmu32/dmu32_AKARI-NEP/field_meta.yml
+++ b/dmu32/dmu32_AKARI-NEP/field_meta.yml
@@ -1,14 +1,14 @@
 field: AKARI-NEP
 
-region: dmu_products/dmu2/dmu2_field_coverages/AKARI-NEP_MOC.fits
+region: http://hedam.lam.fr/HELP/data/dmu_products/dmu2/dmu2_field_coverages/AKARI-NEP_MOC.fits
 
 surveys: [ AKARI-NEP-OptNIR, PanSTARRS-3SS, NEP-Spitzer ]
 
-masterlist: dmu_products/dmu1/dmu1_ml_AKARI-NEP/data/master_catalogue_akari-nep_20180215.fits
+masterlist: http://hedam.lam.fr/HELP/data/dmu_products/dmu1/dmu1_ml_AKARI-NEP/data/master_catalogue_akari-nep_20180215.fits
 
-depths: dmu_products/dmu1/dmu1_ml_AKARI-NEP/data/depths_akari-nep_20180215.fits
+depths: http://hedam.lam.fr/HELP/data/dmu_products/dmu1/dmu1_ml_AKARI-NEP/data/depths_akari-nep_20180215.fits
 
-flags: dmu_products/dmu6/dmu6_v_AKARI-NEP/data/akari-nep_20180215_flags.fits
+flags: http://hedam.lam.fr/HELP/data/dmu_products/dmu6/dmu6_v_AKARI-NEP/data/akari-nep_20180215_flags.fits
 
 xid: None
 
@@ -16,4 +16,4 @@ photoz: None
 
 cigale: None
 
-final: dmu_products/dmu32/dmu32_AKARI-NEP/data/AKARI-NEP_20180215_cigale.fits
+final: http://hedam.lam.fr/HELP/data/dmu_products/dmu32/dmu32_AKARI-NEP/data/AKARI-NEP_20180215_cigale.fits
