--- a/dmu32/dmu32_SGP/field_meta.yml
+++ b/dmu32/dmu32_SGP/field_meta.yml
@@ -1,19 +1,19 @@
 field: SGP
 
-region: dmu_products/dmu2/dmu2_field_coverages/SGP_MOC.fits
+region: http://hedam.lam.fr/HELP/data/dmu_products/dmu2/dmu2_field_coverages/SGP_MOC.fits
 
 surveys: [ ATLAS, KIDS, PanSTARRS-3SS, VISTA-VIKING, DES ]
 
-masterlist: dmu_products/dmu1/dmu1_ml_SGP/data/master_catalogue_sgp_20180221.fits
+masterlist: http://hedam.lam.fr/HELP/data/dmu_products/dmu1/dmu1_ml_SGP/data/master_catalogue_sgp_20180221.fits
 
-depths: dmu_products/dmu1/dmu1_ml_SGP/data/depths_sgp_20180221.fits
+depths: http://hedam.lam.fr/HELP/data/dmu_products/dmu1/dmu1_ml_SGP/data/depths_sgp_20180221.fits
 
-flags: dmu_products/dmu6/dmu6_v_SGP/data/tiles/sgp_20180221_FILENUM_flags.fits.fits
+flags: http://hedam.lam.fr/HELP/data/dmu_products/dmu6/dmu6_v_SGP/data/tiles/sgp_20180221_FILENUM_flags.fits.fits
 
 xid: None
 
-photoz: dmu_products/dmu24/dmu24_SGP/data/master_catalogue_sgp_20180221_photoz_20180502_r_optimised.fits
+photoz: http://hedam.lam.fr/HELP/data/dmu_products/dmu24/dmu24_SGP/data/master_catalogue_sgp_20180221_photoz_20180502_r_optimised.fits
 
 cigale: None
 
-final: dmu_products/dmu32/dmu32_SGP/data/SGP_20180221_cigale.fits
+final: http://hedam.lam.fr/HELP/data/dmu_products/dmu32/dmu32_SGP/data/SGP_20180221_cigale.fits
