--- a/dmu26/dmu26_XID+SPIRE_CDFS-SWIRE/meta_main.yml
+++ b/dmu26/dmu26_XID+SPIRE_CDFS-SWIRE/meta_main.yml
@@ -4,7 +4,7 @@ Version: 1.0
 
 Author: Peter Hurley
 
-Fields: ELAIS-N1
+Fields: CDFS-SWIRE
 
 Selection filter: F_SPIRE_250, F_SPIRE_350, F_SPIRE_500
 
