--- a/dmu26/dmu26_XID+SPIRE_GAMA-15/meta_main.yml
+++ b/dmu26/dmu26_XID+SPIRE_GAMA-15/meta_main.yml
@@ -1,10 +1,10 @@
-Product: dmu26_XID+SPIRE_Lockman-SWIRE
+Product: dmu26_XID+SPIRE_GAMA-15
 
 Version: 1.0
 
 Author: Peter Hurley
 
-Fields: Lockman-SWIRE
+Fields: GAMA-15
 
 Selection filter: F_SPIRE_250, F_SPIRE_350, F_SPIRE_500
 
@@ -12,4 +12,4 @@ Rights: N/A
 
 Acknowledgements: N/A
 
-Related products: Lockman-NEST_image_250_SMAP_v6.0.fits, Lockman-NEST_image_350_SMAP_v6.0.fits, Lockman-NEST_image_500_SMAP_v6.0.fits, master_catalogue_lockman-swire_20171129.fits
+Related products: GAMA-15_SPIRE250_v0.9.fits, GAMA-15_SPIRE350_v0.9.fits, GAMA-15_SPIRE500_v0.9.fits, GAMA15_Ldust_prediction_results.fits, master_catalogue_gama-15_20180119_photoz_20180210_r_optimised.fits'
