--- a/dmu22/meta_main.yml
+++ b/dmu22/meta_main.yml
@@ -4,9 +4,10 @@ Version: 1.0
 
 Author: Steven Duivenvoorden
 
-Fields: All HELP fields
+Fields: GAMA-09 ,GAMA-12 ,GAMA-15 ,HATLAS-NGP, HATLAS-SGP, SSDF ,AKARI-SEP , Bootes , CDFS-SWIRE, COSMOS, EGS, ELAIS-N1, ELAIS-N2, ELAIS-S1, HDF-N, Lockman-SWIRE, SA13,
+        SPIRE-NEP, xFLS, XMM-13hr, XMM-LSS 
 
-Selection filter: F_SPIRE_250, F_SPIRE_350, F_SPIRE_500
+Selection filter: SPIRE 250um, 350um and 500um
 
 Rights: N/A
 
