add py code spire blind

--- a/dmu22/meta_survey.yml
+++ b/dmu22/meta_survey.yml
@@ -16,6 +16,6 @@ Observation dates: 2009 - 2013
 
 Publication date: Date of publication of the data
 
-URL: http://hedam.lam.fr/HerMES/, h-atlas.org
+URL: hedam.lam.fr/HerMES/, h-atlas.org
 
-Acknowledgement: Acknowledgement text associated to the survey
+Acknowledgement: SPIRE has been developed by a consortium of institutes led by Cardiff University (UK) and including Univ. Lethbridge (Canada); NAOC (China); CEA, LAM (France); IFSI, Univ. Padua (Italy); IAC (Spain); Stockholm Observatory (Sweden); Imperial College London, RAL, UCL-MSSL, UKATC, Univ. Sussex (UK); and Caltech, JPL, NHSC, Univ. Colorado (USA). This development has been supported by national funding agencies: CSA (Canada); NAOC (China); CEA, CNES, CNRS (France); ASI (Italy); MCINN (Spain); SNSB (Sweden); STFC, UKSA (UK); and NASA (USA).
